app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require foundation_and_overrides

 */

 $maincolor:#0683F3;
 $secondarycolor:#000;
 $thirdcolor:white;
 $cursivefont:'Pacifico', cursive;
 $smallfont:'Merriweather', serif;


 body {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center top;
  background-position: 0px 45px;
  font-family: $smallfont;
  font-size: 14px;
 }


.top-bar {
  background-color: $maincolor;
  a {  font-family: $cursivefont;
       font-size: 1.35rem;
  }
}

.header {
  font-family: $cursivefont;
  font-size: 1.65rem;
  padding-left: .8rem;
  color: $secondarycolor;

}

.submission {
  text-align: center;
}

.top-bar img {
  height: 100%;
  float: left;
  margin-right: 10px;
  background-color: $maincolor;
}

.top-bar h1 {
  width: 0px;
  margin-left: 100px;
}

.profile-photo img {
  width: 3em;
  height: 3em;
  float: right;
  margin-top: 2px;
  margin-right: 0px;
  background: inherit;
  border-radius: 100%;
}

.design-display img{
  width: 500px;
  height: auto;
  display: inline-flex;
  margin-bottom: 20px;

/*   border:1px solid $secondarycolor; */
}

.design-display img{
  width: 500px;
  height: auto;
  display: inline-flex;
  margin-bottom: 20px;
  transition: all .15s ease-in-out;

/*   border:1px solid $secondarycolor; */
}

.design-display :hover{
  transform: scale(1.1);

}

#navlist li
{
display: inline;
list-style-type: none;
padding-right: 20px;
}


.profile-photo li {
  background: #000000;
}

.top-bar {
  background: $maincolor;
  /* height: 50px; */
}

.top-bar-section li a:not(.button) {
    background: $maincolor !important;
    font-family: $smallfont;
    font-size: .85rem;
    transition: all .3s ease-out;

}
.top-bar-section li:not(.button) {
    background: $maincolor !important;
}

.top-bar-section li a:not(.button):hover {
    background: #7AC0FF !important;
    transition: all .3s ease-in-out;
}

.button {
  display: block;
  background-color: $maincolor;
  color: #FFFFFF;
}

.button:hover {
  background-color: #7AC0FF;
}

.top-bar-section .right {
  background-color: $maincolor;
}


.textboxes {

}

.title {
  text-align: left;
  color: $secondarycolor;
  margin-bottom: 15px;
  margin-left: 10px;
}

.showtitle {
  text-align: left;
  color: $secondarycolor;
  margin-bottom: 15px;
  text-align: center;
}

.design_name {
  text-align: left;
  color: $secondarycolor;
  font-size: 14pt;
  margin-left: 12px;
}

.design_description {
  text-align: left;
  color: $secondarycolor;
  font-size: 12pt;
  margin-left: 14px;
  margin-bottom: 10px;
}


h5 {
  text-align: center;
}


h1 a {
  text-align: center;
  color: $secondarycolor;
  transition: all .3s ease-in-out;
}

h1 {
  font-family: $cursivefont;
}

h2 {
  color: $secondarycolor;
}


h1 a:hover {
  color: $maincolor;
  text-align: center;
    transition: all .3s ease-in-out;
}

.juxtapose {
  a {
  color: $maincolor;
  display: inline;
  }
  a:hover {
    color: $thirdcolor;
      transition: all .3s ease-in-out;
      text-shadow:
       -1px -1px 0 $maincolor,
        1px -1px 0 $maincolor,
        -1px 1px 0 $maincolor,
         1px 1px 0 $maincolor;
          }
}

.review img {
  width: 3em;
  height: 3em;
  margin-top: 2px;
  margin-right: 0px;
  background: inherit;
  border-radius: 100%;
}

.portfolio img {
  width: 3em;
  height: 3em;
  margin-top: 2px;
  margin-right: 0px;
  background: inherit;
  border-radius: 100%;
}

.createdby {
padding-right: 50px;
}


.createdby img {
  width: 3em;
  height: 3em;
  margin-top: 2px;
  margin-right: 0px;
  background: inherit;
  border-radius: 100%;

}
.footer {
  background-color: $secondarycolor;
  color: $thirdcolor;
  height: 10em;
  position: relative;
  width: 100%;
  margin-top: 10em
}

.delete_edit {
  text-align: center;
}

